# ocra-kdl-clients

./: .gitignore  CMakeLists.txt  README.md  package.xml
example-client/: CMakeLists.txt
example-client/config/: lwr_tasks.xml
example-client/include/example-client/: ExampleClient.h
example-client/src/: ExampleClient.cpp  example-client.cpp
